// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`生成 Class 类测试 OpenAPI-2.0生成 Class 类测试: OpenAPI-2.0生成 Class 类测试 1`] = `
"/**
 * @description Place an order for a pet
 * @summary Request data entity class
 * @url [ POST ] /v2/store/order
 */
export class V2StoreOrderRequestclassByPost {
  // { string }
  id = '';
  // { string }
  petId = '';
  // { number }
  quantity = 0;
  // { string }
  shipDate = '';
  // { 'placed' | 'approved' | 'delivered' } Order Status
  status = 'placed';
  // { array } Order Tag
  tag: [
    [
      {
        // { 'error' | 'waring' | 'info' }
        tagName: 'error';
      }
    ]
  ];
  // { boolean }
  complete = false;
}
"
`;

exports[`生成 Class 类测试 OpenAPI-3.0生成 Class 类测试: OpenAPI-3.00生成 Class 类测试 1`] = `
"/**
 * @description Place an order for a pet、Place a new order in the store
 * @summary Response data entity class
 * @url [ POST ] /api/v3/store/order
 */
export class ApiV3StoreOrderResponseclassByPost {
  // { string }
  id = '';
  // { string }
  petId = '';
  // { number }
  quantity = 0;
  // { string }
  shipDate = '';
  // { 'placed' | 'approved' | 'delivered' } Order Status
  status = 'placed';
  // { boolean }
  complete = false;
}
"
`;

exports[`生成 Class 类测试 array单参数: array单参数 1`] = `
"/**
 * @description list
 * @summary Request data entity class
 * @url [ GET ] /system/user/list
 */
export class SystemUserListRequestclassByGet {
  // { array } 门店id
  storeIds = [];
}
"
`;

exports[`生成 Class 类测试 array单参数2: array单参数2 1`] = `
"/**
 * @description list
 * @summary Request data entity class
 * @url [ GET ] /system/user/list
 */
export class SystemUserListRequestclassByGet {
  // { array }
  storeIds = [];
}
"
`;

exports[`生成 Class 类测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 Class dropComment属性测试 1`] = `
"export class V2StoreOrderRequestclassByPost {
  // { string }
  id = '';
  // { string }
  petId = '';
  // { number }
  quantity = 0;
  // { string }
  shipDate = '';
  // { 'placed' | 'approved' | 'delivered' } Order Status
  status = 'placed';
  // { array } Order Tag
  tag: [
    [
      {
        // { 'error' | 'waring' | 'info' }
        tagName: 'error';
      }
    ]
  ];
  // { boolean }
  complete = false;
}
"
`;

exports[`生成 Class 类测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 Class name属性测试 1`] = `
"/**
 * @description Place an order for a pet
 * @summary Request data entity class
 * @url [ POST ] /v2/store/order
 */
export class 自定义名称 {
  // { string }
  id = '';
  // { string }
  petId = '';
  // { number }
  quantity = 0;
  // { string }
  shipDate = '';
  // { 'placed' | 'approved' | 'delivered' } Order Status
  status = 'placed';
  // { array } Order Tag
  tag: [
    [
      {
        // { 'error' | 'waring' | 'info' }
        tagName: 'error';
      }
    ]
  ];
  // { boolean }
  complete = false;
}
"
`;

exports[`生成 Class 类测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 Class onlyBody属性测试 1`] = `
"{
  // { string }
  id = '';
  // { string }
  petId = '';
  // { number }
  quantity = 0;
  // { string }
  shipDate = '';
  // { 'placed' | 'approved' | 'delivered' } Order Status
  status = 'placed';
  // { array } Order Tag
  tag: [
    [
      {
        // { 'error' | 'waring' | 'info' }
        tagName: 'error';
      }
    ]
  ];
  // { boolean }
  complete = false;
}"
`;

exports[`生成 Class 类测试 name - prefix - dropComment - onlyBody 属性测试: OpenAPI-2.0生成 Class prefix属性测试 1`] = `
"/**
 * @description Place an order for a pet
 * @summary Request data entity class
 * @url [ POST ] /v2/store/order
 */
export class V2StoreOrderRequestclassByPost {
  // { string }
  id = '';
  // { string }
  petId = '';
  // { number }
  quantity = 0;
  // { string }
  shipDate = '';
  // { 'placed' | 'approved' | 'delivered' } Order Status
  status = 'placed';
  // { array } Order Tag
  tag: [
    [
      {
        // { 'error' | 'waring' | 'info' }
        tagName: 'error';
      }
    ]
  ];
  // { boolean }
  complete = false;
}
"
`;

exports[`生成 Class 类测试 空属性: 空属性 1`] = `
"/**
 * @description Place an order for a pet
 * @summary Request data entity class
 * @url [ POST ] /v2/store/order
 */
export class V2StoreOrderRequestclassByPost {
  /* 非对象数据，不能生成Class代码**/
}
"
`;

exports[`生成 Class 类测试 空属性: 空数组 1`] = `
"/**
 * @description Place an order for a pet
 * @summary Request data entity class
 * @url [ POST ] /v2/store/order
 */
export class V2StoreOrderRequestclassByPost {}
"
`;
